--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -8,15 +8,15 @@
 
         <link rel="shortcut icon" href="{{ SITEURL }}/favicon.ico" />
 
-        <link rel="stylesheet" type="text/css" href="/theme/foundation/css/foundation.min.css" />
-        <link rel="stylesheet" type="text/css" href="/theme/foundation/webicons/fc-webicons.css" />
+        <link rel="stylesheet" type="text/css" href="{{ STATICURL }}/theme/foundation/css/foundation.min.css" />
+        <link rel="stylesheet" type="text/css" href="{{ STATICURL }}/theme/foundation/webicons/fc-webicons.css" />
 
         <script src="{{ MEDIA_URL }}foundation/js/vendor/custom.modernizr.js"></script>
 
-        <link rel="stylesheet" type="text/css" href="/theme/css/general_foundicons.css" />
-        <link rel="stylesheet" type="text/css" href="/theme/css/social_foundicons.css" />
+        <link rel="stylesheet" type="text/css" href="{{ STATICURL }}/theme/css/general_foundicons.css" />
+        <link rel="stylesheet" type="text/css" href="{{ STATICURL }}/theme/css/social_foundicons.css" />
 
-		<link rel="stylesheet" type="text/css" href="/theme/css/style.css" />
+		<link rel="stylesheet" type="text/css" href="{{ STATICURL }}/theme/css/style.css" />
 		<link rel='stylesheet' id='oswald-css'  href='http://fonts.googleapis.com/css?family=Oswald&#038;ver=3.3.2' type='text/css' media='all' />
 
         <meta name="google-site-verification" content="Ogw6ZN_S7dzUc9huqkiLOeI_BH8F__4Ft8pNXQVU1Cw" />
@@ -44,7 +44,7 @@
 		<script src="/mint/?js" type="text/javascript"></script>
 		{% endif %}
 		{% endblock head %}
-		<base href="http://static.martinfitzpatrick.name">
+		<base href="{{ STATICURL }}">
 </head>
 
 <body class="home blog" >
