Firefox doesn't like cross-domain fonts; move them back

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -13,8 +13,8 @@
 
         <script src="{{ MEDIA_URL }}foundation/js/vendor/custom.modernizr.js"></script>
 
-        <link rel="stylesheet" type="text/css" href="{{ STATICURL }}/theme/css/general_foundicons.css" />
-        <link rel="stylesheet" type="text/css" href="{{ STATICURL }}/theme/css/social_foundicons.css" />
+        <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/general_foundicons.css" />
+        <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/social_foundicons.css" />
 
 		<link rel="stylesheet" type="text/css" href="{{ STATICURL }}/theme/css/style.css" />
 		<link rel='stylesheet' id='oswald-css'  href='http://fonts.googleapis.com/css?family=Oswald&#038;ver=3.3.2' type='text/css' media='all' />
