--- a/theme/templates/post.html
+++ b/theme/templates/post.html
@@ -2,7 +2,7 @@
 	<div class="entry-meta">
 		<div class="date"><a href="{{ SITEURL }}/{{ article.url }}">{{ article.locale_date }}</a></div>
 		{% if article.author and not SINGLE_AUTHOR %}
-		<div itemscope itemtype="http://schema.org/Person">
+		<div itemscope itemtype="http://schema.org/Person" style="margin:0; padding:0">
         <img src="{{ article.author_gravatar }}?s=64&d=mm" itemprop="photo"><br />
 		<span class="byline">By <a href="{{ SITEURL }}/{{ article.author.url }}" itemprop="name">{{ article.author }}</a></span>
 		</div>
