--- a/theme/templates/post.html
+++ b/theme/templates/post.html
@@ -1,6 +1,6 @@
 <div class="post type-post status-publish format-standard hentry category-general" id="post" itemscope itemtype="http://schema.org/Article">
 	<div class="entry-meta">
-		<div class="date"><a href="{{ SITEURL }}/{{ article.url }}">{{ article.locale_date }}</a></div>
+		<div class="date"><a href="{{ SITEURL }}/{{ article.url }}" itemprop="dateCreated">{{ article.locale_date }}</a></div>
 		{% if article.author and not SINGLE_AUTHOR %}
 		<div itemscope itemtype="http://schema.org/Person" style="margin:0; padding:0">
         <img src="{{ article.author_gravatar }}?s=64&d=mm" itemprop="photo"><br />
@@ -11,7 +11,7 @@
 			<div class="comments"><a href="{{ SITEURL }}/{{ article.url }}#disqus_thread" title="Comment on {{ article.title|striptags }}">comments</a></div>
 		{% endif %}
 		{% if DISPLAY_CATEGORIES_ON_MENU %}
-			<span class="cat-links"><a href="{{ SITEURL }}/{{ article.category.url }}" title="View all posts in {{ article.category }}" rel="category tag">{{ article.category }}</a></span>
+			<span class="cat-links"><a href="{{ SITEURL }}/{{ article.category.url }}" title="View all posts in {{ article.category }}" rel="category tag"  itemprop="about">{{ article.category }}</a></span>
 		{% endif %}
         <br />
 
