Fix structured data

--- a/theme/templates/post.html
+++ b/theme/templates/post.html
@@ -1,4 +1,4 @@
-<div class="post type-post status-publish format-standard hentry category-general" id="post" itemscope itemtype="http://schema.org/Article">
+<div class="post type-post status-publish format-standard category-general" id="post" itemscope itemtype="http://schema.org/Article">
 	<div class="entry-meta">
 		<div class="date"><a href="{{ SITEURL }}/{{ article.url }}" itemprop="dateCreated">{{ article.locale_date }}</a></div>
 		{% if article.author and not SINGLE_AUTHOR %}
