--- a/theme/templates/post.html
+++ b/theme/templates/post.html
@@ -1,11 +1,11 @@
-<div class="post type-post status-publish format-standard category-general" id="post" itemscope itemtype="http://schema.org/Article">
+<div class="post type-post status-publish format-standard h-entry category-general" id="post" itemscope itemtype="http://schema.org/Article">
 	<div class="entry-meta">
-		<div class="date"><a href="{{ SITEURL }}/{{ article.url }}" itemprop="dateCreated">{{ article.locale_date }}</a></div>
+		<div class="date"><time class="dt-published" itemprop="dateCreated">{{ article.locale_date }}</time></div>
 		{% if article.author and not SINGLE_AUTHOR %}
 		<div itemscope itemtype="http://schema.org/Person" style="margin:0; padding:0">
         <a href="{{ AUTHOR_IDENTITIES[ article.author|string ] }}?rel=author"></a>
         <img src="{{ article.author_gravatar }}?s=64&d=mm" itemprop="image"><br />
-		<span class="byline">By <a href="{{ SITEURL }}/{{ article.author.url }}" itemprop="name">{{ article.author }}</a></span>
+		<span class="byline">By <a href="{{ SITEURL }}/{{ article.author.url }}" itemprop="name" class="p-author">{{ article.author }}</a></span>
 		</div>
 		{% endif %}
 		{% if DISQUS_SITENAME %}
