--- a/theme/templates/archives.html
+++ b/theme/templates/archives.html
@@ -6,7 +6,7 @@
 </div>
 {% endblock %}
 {% block content %}
-<div class="page type-page status-publish hentry" id="post">
+<div class="page type-page status-publish h-entry" id="post">
 	<div id="main">
 		<div class="entry-content">
 			<dl>
