--- a/theme/templates/page.html
+++ b/theme/templates/page.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}{{ page.title|striptags }} | {{ SITENAME }}{% endblock %}
 {% block content %}
-<div class="page type-page status-publish hentry" id="post">
+<div class="page type-page status-publish h-entry" id="post">
 	<div class="entry-meta">
 		<!-- <div class="comments"><a href="{{ SITEURL }}/{{ page.url }}#disqus_thread" title="Comment on {{ page.title|striptags }}">Leave a comment</a></div> -->
 		<span class="cat-links"></span>
