--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="{{ DEFAULT_LANG }}">
 <head>
 		{% block head %}
-		<title>{% block title %}{{ SITENAME }}{% endblock title %}</title>
+		<title>{% block title %}{{ SITENAME }}: {{ SITESUBTITLE }}{% endblock title %}</title>
 		<meta charset="utf-8" />
 		<link rel="profile" href="http://gmpg.org/xfn/11" />
 
