Re-do URL structure so sitemaps work

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -109,11 +109,11 @@
         <div class="large-7 columns image-header-overlay">
             <h1>Postgraduate Researcher in Metabolomics</h1>            
             <h6>
-                <a href="{{ SITEURL }}/category/bioinformatics">Bioinformatics</a> | 
-                <a href="{{ SITEURL }}/category/immunology">Immunology</a> |
-                <a href="{{ SITEURL }}/tag/python">Python</a> |
-                <a href="{{ SITEURL }}/tag/qt">Qt</a> |
-                <a href="{{ SITEURL }}/category/web-dev">Web Dev</a>
+                <a href="{{ SITEURL }}/category/bioinformatics/">Bioinformatics</a> | 
+                <a href="{{ SITEURL }}/category/immunology/">Immunology</a> |
+                <a href="{{ SITEURL }}/tag/python/">Python</a> |
+                <a href="{{ SITEURL }}/tag/qt/">Qt</a> |
+                <a href="{{ SITEURL }}/category/web-dev/">Web Dev</a>
             </h6>
         </div>
         </div>
