Fix up homepage a bit

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -107,14 +107,20 @@
     <div class="image-header">
         <div class="image-header-row row">
         <div class="large-7 columns image-header-overlay">
-            <h1>Postgraduate Researcher in Metabolomics</h1>            
-            <h6>
+            <h1>Martin Fitzpatrick</h1>
+            <h3>Postgraduate Researcher in Metabolomics</h3>
+        <div class="image-header-sections">
+                    <h6>
+                <a href="{{ SITEURL }}/tag/pathomx/">Pathomx</a> | 
+                <a href="{{ SITEURL }}/tag/metabolomics/">Metabolomics</a> | 
                 <a href="{{ SITEURL }}/category/bioinformatics/">Bioinformatics</a> | 
                 <a href="{{ SITEURL }}/category/immunology/">Immunology</a> |
                 <a href="{{ SITEURL }}/tag/python/">Python</a> |
                 <a href="{{ SITEURL }}/tag/qt/">Qt</a> |
                 <a href="{{ SITEURL }}/category/web-dev/">Web Dev</a>
             </h6>
+        </div>
+
         </div>
         </div>
     </div>
