--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -462,22 +462,31 @@ body {
 
 .image-header-overlay {
     position:absolute;
-    width:550px;
-    height:200px;
-
-    top:180px;
-
-    background-color:rgba(239,67,35,0.6);
+    top:250px;
+    background-color:rgba(239,67,35,0.7);
     color:#fff;
     padding:0 1em;
     margin:0 1em;
+    padding-bottom:-2em;
 }
 
 .image-header-overlay * {
     color:#fff;
 }
 
-.image-header-overlay h6 {
+.image-header-overlay h1 {
+    margin-bottom:0;
+    padding-bottom:0;
+    font-weight:normal !important;
+    
+}
+
+.image-header-sections {
+    position:absolute;
+    bottom:-25px;
+}
+
+.image-header-sections h6 {
     margin:0;
     text-transform:uppercase;
     font-family: 'Oswald', Helvetica, Arial, sans-serif;
@@ -486,7 +495,7 @@ body {
     color: #ef4323;
 }
 
-.image-header-overlay h6 a {
+.image-header-sections h6 a {
     color:#fff;
 }
 
