--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -566,6 +566,7 @@ img.inline.left { padding: 0.2em 1em 0.2em 0; }
 img.inline.right { padding: 0.2em 0em 0.2em 1em; }
 
 pre, code {
+    padding:1em;
     margin-bottom:20px; 
     background-color:#F8F8F8;
     border:#ddd 1px solid;
