--- a/theme/templates/article.html
+++ b/theme/templates/article.html
@@ -28,20 +28,23 @@
 
 
 {% block comments %}
-<div class="row">
-<div class="large-12 columns">
+<div id="main-wrapper">
+    <div class="container">
+        <div class="row">
+        <div class="large-12 columns">
 
-{% if DISQUS_SITENAME %}
-<div id="disqus_thread" class="box"></div>
-<script type="text/javascript">
-    var disqus_shortname = '{{ DISQUS_SITENAME }}';
-    (function() {
-        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    })();
-</script>
+    {% if DISQUS_SITENAME %}
+    <div id="disqus_thread" class="box"></div>
+    <script type="text/javascript">
+        var disqus_shortname = '{{ DISQUS_SITENAME }}';
+        (function() {
+            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+    </script>
+    </div></div>
 </div></div>
-{% endif %}
+    {% endif %}
 
 {% endblock %}
