--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -110,9 +110,11 @@
 				<div class="container">
 					{% block content %}
 					{% endblock %}
-
 				</div>
 			</div>
+
+        {% block comments %}
+        {% endblock %}
 
 		<!-- Footer Wrapper -->
 			<div id="footer-wrapper">
