--- a/theme/templates/sidebar.html
+++ b/theme/templates/sidebar.html
@@ -11,7 +11,7 @@
             </header>
             <p>{{ AUTHOR_ABOUT }}</p>
             <footer>
-                <a href="{{ SITEURL }}/about" class="button button-alt">Read more</a>
+                <a href="{{ SITEURL }}/about/" class="button button-alt">Read more</a>
             </footer>
         </section>
         
