Fix title area; update the skel CSS url to remote static (faster load; tho knackers local dev)

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -57,7 +57,7 @@
 								<section id="header">
 									
 									<!-- Logo -->
-									<h1><a href="{{ SITEURL }}/">{{ SITENAME }}</a></h1>
+									<h1><a href="{{ SITEURL }}/">{{ SITENAME }} <span style="font-size:0.5em;">MRes</span></a></h1>
 									<p>{{ SITESUBTITLE }}</p>
 									<!-- Nav -->
 										<nav id="nav">
