Fix title area; move skel config into html fix dev issue

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -247,7 +247,42 @@
 			</div>
 		<script src="/theme/js/jquery.min.js"></script>
 		<script src="/theme/js/jquery.dropotron.js"></script>
-		<script src="/theme/js/config.js"></script>
+		<script>
+		/*
+            Dopetrope 2.0 by HTML5 UP
+            html5up.net | @n33co
+            Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+        */
+
+        window._skel_config = {
+            preset: 'standard',
+            prefix: '{{ STATICURL }}/theme/css/style',
+            resetCSS: true,
+            breakpoints: {
+                'desktop': {
+                    grid: {
+                        gutters: 50
+                    }
+                }
+            }
+        };
+
+        window._skel_panels_config = {
+            preset: 'standard'
+        };
+
+        jQuery(function() {
+            $('#nav > ul').dropotron({ 
+                offsetY: -17,
+                offsetX: -1,
+                mode: 'fade',
+                noOpenerFade: true,
+                detach: false
+            });
+        });
+
+		
+		</script>
 		<script src="/theme/js/skel.min.js"></script>
 		<script src="/theme/js/skel-panels.min.js"></script>
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><link rel="stylesheet" href="/theme/css/ie8.css" /><![endif]-->
