--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -162,12 +162,12 @@
 
 			.button:hover
 			{
-				background: #e53359;
+				background: #d92908;
 			}
 			
 			.button:active
 			{
-				background: #c51349;
+				background: #ef3512;
 			}
 		
 			.button-alt
