--- a/theme/templates/sidebar.html
+++ b/theme/templates/sidebar.html
@@ -24,7 +24,7 @@
             </header>
             <ul class="divided">
             {% for related_post in article.related_posts %}
-                <li><a href="{{ related_post.url }}">{{ related_post.title }}</a></li>
+                <li><a href="{{ SITEURL }}{{ related_post.url }}">{{ related_post.title }}</a></li>
             {% endfor %}
             </ul>
         </section>
