--- a/theme/templates/article.html
+++ b/theme/templates/article.html
@@ -27,7 +27,7 @@
 
 
 {% block comments %}
-<div>
+<div id="main-wrapper">
     <div class="container">
         <div class="row">
         <div class="large-12 columns">
