--- a/theme/templates/article.html
+++ b/theme/templates/article.html
@@ -1,36 +1,29 @@
 {% extends "sidebar.html" %}
-{% block content %}
-<div class="row">
-	<div class="9u">
-        <section>
-            <div>
-                <div class="row">
-                    <div class="12u skel-cell-mainContent">
-                        <!-- Content -->
-                            <article class="box is-post">
-                                <!-- {% if article.picture %}<div class="image image-full"><img src="{{ SITEURL }}/{{ article.picture }}"/><a href="{{ article.picturecopyrights }}" class="img-copy">{{ article.picturecopyrights }}</a></div>{% endif %} -->
-                                <h2>{{ article.title }}</h2>
-                                <div class="metadata">Posted {% if article.category %}in <a  href="{{ article.category.url }}">{{ article.category|capitalize }}</a>{% endif %} on {{ article.locale_date }} &#8226;
-                                   Tagged {% for tag in article.tags %}<a href="{{ tag.url }}">{{ tag|capitalize }}</a>{% if not loop.last%}, {% endif %}{% endfor %}
-                                </div>
 
-                                {{ article.content }}
-                            </article>
-                    </div>
-                </div>
-            </div>
-        </section>
-	</div>
-{{ super() }}
-</div>
+{% block bodytitle %}{{ article.category }}{% endblock %}
+
+{% block body %}
+<!-- Content -->
+<article class="is is-post">
+    <header>
+        <h1><a href="{{ article.url }}">{{ article.title }}</a></h1>
+        <div class="metadata">Posted {% if article.category %}in <a  href="{{ article.category.url }}">{{ article.category|capitalize }}</a>{% endif %} on {{ article.locale_date }} &#8226;
+           Tagged {% for tag in article.tags %}<a href="{{ tag.url }}">{{ tag|capitalize }}</a>{% if not loop.last%}, {% endif %}{% endfor %}
+        </div>
+    </header>
+    {{ article.content }}
+</article>
 {% endblock %}
 
 
 {% block comments %}
-<div id="main-wrapper">
+<!-- Highlights Wrapper -->
+<div class="wrapper wrapper-style3">
+    <div class="title">Comments</div>
     <div class="container">
         <div class="row">
-        <div class="large-12 columns">
+            <div class="12u">
+                
 
     {% if DISQUS_SITENAME %}
     <div id="disqus_thread" class="box"></div>
@@ -43,7 +36,12 @@
         })();
     </script>
     </div></div>
-</div></div>
     {% endif %}
 
+                
+            </div>
+        </div>
+    </div>
+</div>
+<!-- /Highlights Wrapper -->
 {% endblock %}
