--- a/theme/static/css/style-desktop.css
+++ b/theme/static/css/style-desktop.css
@@ -1,5 +1,5 @@
 /*
-	Dopetrope 2.0 by HTML5 UP
+	Escape Velocity 2.5 by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
@@ -8,199 +8,284 @@
 /* Basic                                                                         */
 /*********************************************************************************/
 
+	body, input, select, textarea
+	{
+		font-size: 13pt;
+		line-height: 1.75em;
+		letter-spacing: 0.025em;
+	}
+
 	body
 	{
-		font-size: 11pt;
-		line-height: 1.75em;
 		min-width: 1200px;
 	}
-	
-	h2
+
+	hr
 	{
-		font-size: 1.5em;
-	}
-	
-	h3
-	{
-		font-size: 1.35em;
+		margin: 2em 0 2em 0;
 	}
 
-	.byline
+	section,
+	article
 	{
-		margin: 0.5em 0 0 0;
-		padding-bottom: 0.5em;
+		margin: 0 0 4em 0;
 	}
-	
-	header
-	{
-		margin: 0 0 1.5em 0;
-	}
-	
-	footer
-	{
-		margin: 2.25em 0 0 0;
-	}
-	
-	/* Actions */
 
-		.actions
+	header.style1
+	{
+		padding: 3em 0 3em 0;
+	}
+
+		header.style1 h2
 		{
+			font-size: 2em;
+			letter-spacing: 0.075em;
+			line-height: 1.5em;
 		}
 		
-			.actions .button
+		header.style1 .byline
+		{
+			display: block;
+			margin: 1.15em 0 0 0;
+			font-size: 1.3em;
+			letter-spacing: 0.075em;
+			line-height: 1.5em;
+		}
+
+	form
+	{
+	}
+	
+		form label
+		{
+			margin: 0.25em 0 0.25em 0;
+		}
+
+	.button
+	{
+		padding: 0 2.25em 0 2.25em;
+		font-size: 0.9em;
+		min-width: 12em;
+		height: 4em;
+		line-height: 4em;
+	}
+	
+		.button-big
+		{
+			font-size: 1em;
+			min-width: 14em;
+		}
+
+	.actions
+	{
+		margin: 3em 0 0 0;
+	}
+	
+		form .actions
+		{
+			margin-top: 1em;
+		}
+	
+		.actions li
+		{
+			display: inline-block;
+			margin: 0 0.75em 0 0.75em;
+		}
+		
+		.actions li:first-child
+		{
+			margin-left: 0;
+		}
+		
+		.actions li:last-child
+		{
+			margin-right: 0;
+		}
+		
+		.actions-centered
+		{
+			text-align: center;
+		}
+		
+	.feature-list
+	{
+	}
+
+		.feature-list section
+		{
+			padding-top: 2em;
+			border-top: solid 1px #eee;
+		}
+
+		.feature-list .row
+		{
+		}
+	
+			.feature-list .row:first-child
 			{
+			}
+			
+				.feature-list .row:first-child section
+				{
+					padding-top: 0;
+					border-top: 0;
+				}
+
+		.feature-list h3
+		{
+			margin: 0 0 0.75em 0;
+			font-size: 1.15em;
+			letter-spacing: 0.05em;
+			margin-top: -0.35em;
+		}
+
+			.feature-list h3:before
+			{
+				width: 64px;
+				height: 64px;
+				line-height: 64px;
 				margin-right: 0.75em;
+				font-size: 32px;
+				top: 0.2em;
 			}
-
-	/* Box */
-
-		.box
-		{
-			padding: 2.75em 1.75em 2.75em 1.75em;
-		}
-		
-			.box .image-full
-			{
-				left: 1.75em;
-				top: 1.75em;
-				margin: -4.5em 0 4.25em -3.5em;
-			}
-
-	/* Button */
 	
-		.button
+		.feature-list p
 		{
-			font-size: 1.1em;
-			padding: 0.65em 1.5em 0.65em 1.5em;
+			margin: 0 0 0 5em;
 		}
-
-			.button-big
+		
+		.feature-list-small
+		{
+		}
+		
+			.feature-list-small h3
 			{
-				font-size: 1.5em;
-				padding: 0.75em 1.5em 0.75em 1.5em;
+			}
+		
+				.feature-list-small h3:before
+				{
+					font-size: 24px;
+					line-height: 45px;
+					width: 45px;
+					height: 45px;
+					margin-right: 1em;
+				}
+				
+			.feature-list-small p
+			{
+				margin: 0 0 0 4em;
 			}
 
-	/* Is-* */
+	.is
+	{
+	}
 	
-		.is-post
+		.is header
 		{
+			margin: 0 0 1.5em 0;
+		}
+
+			.is header.style1
+			{
+				position: relative;
+				margin: -0.5em 0 0 0;
+				padding-top: 0;
+			}
+
+		.is h2
+		{
+			margin: 0 0 0.75em 0;
+			font-size: 1.15em;
+			letter-spacing: 0.05em;
+		}
+
+		.is h3
+		{
+			margin: 0 0 0.5em 0;
+			font-size: 1em;
+			font-weight: 600;
+			letter-spacing: 0.05em;
+		}
+
+	.is-pair-one
+	{
+		padding-right: 1.5em;
+	}
+
+	.is-pair-two
+	{
+		padding-left: 1.5em;
+	}
+	
+	.is-triple-one
+	{
+		padding-right: 1.5em;
+	}
+	
+	.is-triple-two
+	{
+		padding-left: 0.75em;
+		padding-right: 0.75em;
+	}
+	
+	.is-triple-three
+	{
+		padding-left: 1.5em;
+	}
+
+	.is-post-excerpt
+	{
+	}
+	
+		.is-post-excerpt .image-left
+		{
+			position: relative;
+			top: 0.5em;
+			width: 5em;
 		}
 		
-			.is-post header
-			{
-				padding-top: 1em;
-				margin: 0 0 2em 0;
-			}
+		.is-post-excerpt h3,
+		.is-post-excerpt p
+		{
+			margin-left: 7em;
+		}
 		
-			.is-post h2
-			{
-				padding:0.5em 0;
-				font-size: 2.5em;
-				letter-spacing: -0.015em;
-				line-height:1em;
-			}
-			.is-post p {
-				margin:1em 0;
-			}
-			
-			.is-post .byline
-			{
-				margin-top: 1.25em;
-				font-size: 1.25em;
-			}
-
-	/* List */
-
-		ul.links
-		{
-		}
-
-			ul.links li
-			{
-				display: inline-block;
-				border-left: solid 1px rgba(255,255,255,0.05);
-				padding: 0 0 0 1em;
-				margin: 0 0 0 1em;
-			}
-			
-			ul.links li:first-child
-			{
-				border-left: 0;
-				padding-left: 0;
-				margin-left: 0;
-			}
-
-		ul.social
-		{
-			margin: 0 0 3.25em 0;
-		}
-
-			ul.social li
-			{
-				margin-left: 0.75em;
-			}
-
-	/* Pennant */
-
-		.pennant
-		{
-			margin: 0 0 4em 0;
-		}
-
 /*********************************************************************************/
 /* Wrappers                                                                      */
 /*********************************************************************************/
 
+	.wrapper
+	{
+		padding: 6em 0 9em 0;
+	}
+
+		.wrapper .title
+		{
+			font-size: 0.9em;
+			width: 25em;
+			height: 3.25em;
+			top: -3.25em;
+			line-height: 3.25em;
+			margin-bottom: -3.25em;
+			margin-left: -12.5em;
+			padding-top: 0.5em;
+		}
+
 	#header-wrapper
 	{
-		padding: 1em 0 1em 0;
+		padding: 0;
+		height: 300px;
 	}
 
-		#header-wrapper:before
+		.homepage #header-wrapper
 		{
-			height: 10em;
+			height: 573px;
 		}
-	
-		#header-wrapper:after
-		{
-			height: 20em;
-			top: -2.5em;
-		}
-	
-	#main-wrapper
+
+	#intro-wrapper
 	{
-		padding: 6em 0 6em 0;
+		padding-bottom: 8em;
 	}
-
-		#main-wrapper:after
-		{
-			height: 5em;
-		}
-	
-	#footer-wrapper
-	{
-		padding: 6em 0 6em 0;
-	}
-
-		#footer-wrapper:before
-		{
-			height: 5em;
-		}
-
-		#footer-wrapper header
-		{
-			margin: 0 0 3em 0;
-		}
-		
-			#footer-wrapper header h2
-			{
-				font-size: 1.75em;
-			}
-			
-		#footer-wrapper .row
-		{
-			padding-bottom: 2em;
-		}
 
 /*********************************************************************************/
 /* Header                                                                        */
@@ -208,16 +293,47 @@
 
 	#header
 	{
-		text-align: center;
+		position: relative;
+		height: 300px;
 	}
-	
-		#header h1
+
+		.homepage #header
 		{
-			color: #252122;
-			font-weight: 900;
-			font-size: 2.5em;
-			letter-spacing: -0.035em;
-			margin: 0 0 0.15em 0;
+			height: 573px;
+		}
+
+/*********************************************************************************/
+/* Logo                                                                          */
+/*********************************************************************************/
+
+	#logo
+	{
+		position: absolute;
+		height: 5em;
+		top: 50%;
+		left: 0;
+		width: 100%;
+		text-align: center;
+		margin-top: -0.5em;
+	}
+
+		.homepage #logo
+		{
+			margin-top: -1em;
+		}
+
+		#logo h1
+		{
+			font-size: 2em;
+			letter-spacing: 0.25em;
+		}
+		
+		#logo .byline
+		{
+			margin: 1.25em 0 0 0;
+			display: block;
+			letter-spacing: 0.2em;
+			font-size: 0.9em;
 		}
 
 /*********************************************************************************/
@@ -226,166 +342,234 @@
 
 	#nav
 	{
+		position: absolute;
+		display: block;
+		top: 2.5em;
+		left: 0;
+		width: 100%;
+		text-align: center;
 	}
-
-		#nav > ul
-		{
-			margin: 0;
-		}
 
 		#nav > ul > li > ul
 		{
 			display: none;
 		}
 
+		#nav > ul
+		{
+			display: inline-block;
+			border-radius: 0.35em;
+			box-shadow: inset 0px 0px 1px 1px rgba(255,255,255,0.25);
+			padding: 0 1.5em 0 1.5em;
+		}
+
 		#nav > ul > li
 		{
 			display: inline-block;
-			font-style: italic;
-			margin: 0 0.35em 0 0.35em;
+			text-align: center;
+			padding: 0 1.5em 0 1.5em;
 		}
 		
-			#nav > ul > li > a
+			#nav > ul > li > a,
+			#nav > ul > li > span
 			{
-				border-radius: 5px;
-				color: #5d5d5d;
+				display: block;
+				color: #eee;
+				color: rgba(255,255,255,0.75);
+				text-transform: uppercase;
 				text-decoration: none;
-				padding: 0.6em 1.2em 0.6em 1.2em;
-				-moz-transition: background-color .25s ease-in-out;
-				-webkit-transition: background-color .25s ease-in-out;
-				-o-transition: background-color .25s ease-in-out;
-				-ms-transition: background-color .25s ease-in-out;
-				transition: background-color .25s ease-in-out;
+				font-size: 0.7em;
+				letter-spacing: 0.25em;
+				height: 5em;
+				line-height: 5em;
+				-moz-transition: all .25s ease-in-out;
+				-webkit-transition: all .25s ease-in-out;
+				-o-transition: all .25s ease-in-out;
+				-ms-transition: all .25s ease-in-out;
+				transition: all .25s ease-in-out;
 				outline: 0;
 			}
-
-		#nav > ul > li:hover
-		{
-		}
-		
-			#nav > ul > li:hover > a
-			{
-				background: #f3f3f3;
-			}
 			
-		#nav > ul > li.active
-		{
-		}
-		
-			#nav > ul > li.active > a
-			{
-				background: #f3f3f3;
-			}
-			
-		#nav > ul > li.current_page_item
-		{
-		}
-		
-			#nav > ul > li.current_page_item > a
-			{
-				background: #ef4323;
-				color: #fff !important;
-				font-weight: 700;
-			}
-			
-	.dropotron
-	{
-		border-radius: 5px;
-		background-color: #252122;
-		background-color: rgba(34,30,31,0.98);
-		padding: 1.25em 1.5em 1.25em 1.5em;
-		font-style: italic;
-		min-width: 13em;
-		box-shadow: 0px 8px 15px 0px rgba(0,0,0,0.5);
-		text-align: left;
-	}
-	
-		.dropotron a,
-		.dropotron span
-		{
-			color: #aaa;
-			text-decoration: none;
-			-moz-transition: color .25s ease-in-out;
-			-webkit-transition: color .25s ease-in-out;
-			-o-transition: color .25s ease-in-out;
-			-ms-transition: color .25s ease-in-out;
-			transition: color .25s ease-in-out;
-		}
-		
-		.dropotron li
-		{
-			padding: 0.25em 0 0.25em 0;
-		}
-
-			.dropotron li:hover > a,
-			.dropotron li:hover >span
+			#nav > ul > li:hover > a,
+			#nav > ul > li.active > a,
+			#nav > ul > li.active > span
 			{
 				color: #fff;
 			}
 
-		.dropotron-level-0
-		{
-			margin-top: 2em;
-			margin-left: -0.51em;
-		}
-		
-			.dropotron-level-0:before
-			{
-				content: '';
-				display: block;
-				position: absolute;
-				left: 20px;
-				top: -10px;
-				border-left: solid 10px transparent;
-				border-right: solid 10px transparent;
-				border-bottom: solid 10px #252122;
-				border-bottom-color: rgba(34,30,31,0.98);
-			}
-
-/*********************************************************************************/
-/* Banner                                                                        */
-/*********************************************************************************/
-
-	#banner
+	.dropotron
 	{
-		position: relative;
-		margin-top: 1em;
+		background: #222835 url('images/overlay.png');
+		background-color: rgba(44,50,63,0.925);
+		padding: 1.25em 1em 1.25em 1em;
+		border-radius: 0.35em;
+		box-shadow: inset 0px 0px 1px 1px rgba(255,255,255,0.25);
+		min-width: 12em;
+		text-align: left;
 	}
 	
-		#banner header
+		.dropotron.level-0
 		{
-			border-radius: 5px;
-			position: absolute;
-			left: 0;
-			top: 0;
-			padding: 4em;
-			left: 50%;
-			top: 50%;
-
-			/*
-				To vertically center this we need to set a width/height for the header
-				overlay, then set a negative left/top margin set to half its width/height.
-			*/
-			
-			width: 50em;
-			height: 13em;
-			
-			margin-left: -25em;
-			margin-top: -6.5em;
+			margin-top: -1px;
+			border-top-left-radius: 0;
+			border-top-right-radius: 0;
+		}
+	
+		.dropotron a,
+		.dropotron span
+		{
+			display: block;
+			color: #eee;
+			color: rgba(255,255,255,0.75);
+			text-transform: uppercase;
+			text-decoration: none;
+			font-size: 0.7em;
+			letter-spacing: 0.25em;
+			border-top: solid 1px rgba(255,255,255,0.15);
+			line-height: 3em;
+			-moz-transition: all .25s ease-in-out;
+			-webkit-transition: all .25s ease-in-out;
+			-o-transition: all .25s ease-in-out;
+			-ms-transition: all .25s ease-in-out;
+			transition: all .25s ease-in-out;
 		}
 		
-			#banner header h2
+		.dropotron li:first-child a,
+		.dropotron li:first-child span
+		{
+			border-top: 0;
+		}
+		
+		.dropotron li:hover > a,
+		.dropotron li:hover > span
+		{
+			color: #fff;
+		}
+
+/*********************************************************************************/
+/* Intro                                                                         */
+/*********************************************************************************/
+
+	#intro
+	{
+		text-align: center;
+	}
+
+		#intro .style1
+		{
+			font-size: 1.5em;
+			letter-spacing: 0.075em;
+		}	
+		
+		#intro .style2
+		{
+			font-size: 2.75em;
+			letter-spacing: 0.075em;
+			line-height: 1.35em;
+			padding: 1em 0 1em 0;
+			margin-bottom: 1em;
+		}
+		
+		#intro .style3
+		{
+			font-size: 1.1em;
+			width: 48em;
+			margin: 0 auto;
+		}
+
+/*********************************************************************************/
+/* Features                                                                      */
+/*********************************************************************************/
+
+	#features
+	{
+		padding: 0 6em 0 6em;
+	}
+
+		#features header.style1
+		{
+			padding-bottom: 5em;
+		}
+		
+		#features .actions
+		{
+			margin-top: 5em;
+		}
+
+/*********************************************************************************/
+/* Highlights                                                                    */
+/*********************************************************************************/
+
+	#highlights
+	{
+	}
+
+		#highlights .highlight
+		{
+		}
+
+			#highlights .highlight h3
 			{
-				font-size: 3em;
-				margin: 0 0 0.65em 0;
-				/*line-height: 1.1em;*/
+				margin: 0 0 0.75em 0;
+				font-size: 1.15em;
+				letter-spacing: 0.05em;
 			}
 
-			#banner header .byline
-			{
-				font-size: 1.75em;
-			}
-			
+		#highlights .highlight-one
+		{
+			padding-right: 2em;
+		}
+		
+		#highlights .highlight-two
+		{
+			padding: 0 1em 0 1em;
+		}
+		
+		#highlights .highlight-three
+		{
+			padding-left: 2em;
+		}
+
+/*********************************************************************************/
+/* Main                                                                          */
+/*********************************************************************************/
+
+	#main
+	{
+		margin: 1em 0 1em 0;
+	}
+
+		.homepage #main
+		{
+			margin: 0;
+		}
+
+/*********************************************************************************/
+/* Content                                                                       */
+/*********************************************************************************/
+
+	#content
+	{
+	}
+
+/*********************************************************************************/
+/* Sidebar                                                                       */
+/*********************************************************************************/
+
+	#sidebar
+	{
+	}
+
+		.left-sidebar #sidebar
+		{
+			padding-right: 3em;
+		}
+
+		.right-sidebar #sidebar
+		{
+			padding-left: 3em;
+		}
+
 /*********************************************************************************/
 /* Footer                                                                        */
 /*********************************************************************************/
@@ -394,85 +578,63 @@
 	{
 	}
 
-/*********************************************************************************/
-/* Main                                                                          */
-/*********************************************************************************/
-
-	#main
-	{
-	}
-
-/*********************************************************************************/
-/* Intro                                                                         */
-/*********************************************************************************/
-
-	#intro
-	{
-		padding: 3em 0 0 0;
-	}
-	
-		#intro section
+		#footer header.style1
 		{
-			padding: 2em 0 2em 0;
+			padding-bottom: 0;
 		}
 
-		#intro h2
+		#footer hr
 		{
-			font-size: 1.75em;
+			margin: 6em 0 6em 0;
+		}
+
+		#footer .footer-one
+		{
+			padding-right: 1.5em;
 		}
 		
-		#intro p
+		#footer .footer-two
 		{
-			font-size: 1.25em;
-			margin: 0;
+			padding-left: 1.5em;
 		}
-	
-		#intro .middle
-		{
-			box-shadow:	16px 0px 0px 0px #fff,
-						17px 0px 0px 0px #ccc, 
-						
-						-16px 0px 0px 0px #fff, 
-						-17px 0px 0px 0px #ccc, 
-						
-						-16px -45px 0px 0px #fff, 
-						16px -45px 0px 0px #fff, 
-
-						-16px 45px 0px 0px #fff, 
-						16px 45px 0px 0px #fff, 
-
-						-16px 0px 45px 0px rgba(0,0,0,0.15),
-						16px 0px 45px 0px rgba(0,0,0,0.15);
-		}
-		
-		#intro .actions
-		{
-			padding: 5em 0 0 0;
-		}
-		
-			#intro .actions .button
-			{
-				width: 12em;
-				margin: 0 0.5em 0 0.5em;
-			}
 
 /*********************************************************************************/
 /* Copyright                                                                     */
 /*********************************************************************************/
-		
+
 	#copyright
 	{
-		margin: 3em 0 2em 0;
+		margin: 6em 0 0 0;
 	}
 	
-		#copyright .links
+		#copyright span
 		{
-			padding: 0.85em 2.25em 0.85em 2.25em;
+			padding: 1.5em 4em 1.5em 4em;
+			line-height: 1em;
+			font-size: 0.8em;
 		}
+		
+		
+		
 
-pre {
-	border-radius: 0.5em;
-	background-color: #f3f3f3;
-	font-family: Inconsolata, Monaco, monospace;
-	padding: 1em;
+.metadata {
+    font-size: 0.8em;
+    margin-bottom: 0.5em;
+}
+
+.article-list h3 {
+    margin-bottom: 0em;
+}
+
+.article-list p {
+    margin-left: 0;
+}		
+
+header h1 {
+    font-size: 2.5em;
+    line-height: 1.25em;
+}
+
+article .metadata {
+    margin-bottom: 1em;
 }
