--- a/theme/static/css/style-mobile.css
+++ b/theme/static/css/style-mobile.css
@@ -1,5 +1,5 @@
 /*
-	Dopetrope 2.0 by HTML5 UP
+	Escape Velocity 2.5 by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
@@ -8,20 +8,17 @@
 /* Basic                                                                         */
 /*********************************************************************************/
 
-	body
+	body, input, select, textarea
 	{
-		line-height: 1.75em;
-		font-size: 11pt;
+		line-height: 1.5em;
+		font-size: 10.5pt;
 		letter-spacing: 0;
 	}
 
 	h2, h3, h4, h5, h6
 	{
-		font-size: 1.25em;
-	}
-
-	header
-	{
+		font-size: 1.2em;
+		letter-spacing: 0.05em;
 		margin: 0 0 1em 0;
 	}
 
@@ -29,114 +26,148 @@
 	article
 	{
 		clear: both;
-		margin: 1.5em 0 1.5em 0 !important;
+		padding: 1em 0 1em 0 !important;
 	}
 
-	/* Box */
+	header.style1
+	{
+		padding: 0 0 1em 0;
+	}
 
-		.box
+		header.style1 h2
 		{
-			padding: 25px 15px 20px 15px;
+			font-size: 1.5em;
+			letter-spacing: 0.075em;
+			line-height: 1.25em;
 		}
 		
-			.box .image-full
-			{
-				left: 15px;
-				top: 15px;
-				margin: -40px 0 40px -30px;
-			}
-
-	/* Button */
-
-		.button
+		header.style1 .byline
 		{
-			position: relative;
-			padding: 0.5em !important;
-			width: 100%;
-			text-align: center;
-			font-size: 1.25em;
-			margin: 0.25em 0 0.25em 0;
-		}
-
-			.button-icon
-			{
-			}
-
-				.button-icon:before
-				{
-					position: absolute;
-					left: 0.5em;
-				}
-
-	/* List */
-
-		ul.contact
-		{
-		}
-
-			ul.contact li
-			{
-				padding: 0.8em 0 0.8em 7em;
-			}
-
-				ul.contact li h3
-				{
-					top: 0.8em;
-				}
-
-		ul.divided
-		{
+			display: block;
+			margin: 0;
 		}
 		
-			ul.divided li
-			{
-				padding: 0.5em 0 0.5em 0;
-			}
+	hr
+	{
+		margin: 1em 0 1em 0;
+	}
 
-		ul.links
+	form
+	{
+	}
+	
+		form input.text,
+		form select,
+		form textarea
 		{
 		}
-		
-			ul.links li
-			{
-				display: block;
-				border-top: solid 1px rgba(255,255,255,0.05);
-				padding: 0.25em 0 0 0;
-				margin: 0.25em 0 0 0;
-			}
-			
-			ul.links li:first-child
+
+	.image-featured
+	{
+		position: relative;
+		overflow: hidden;
+
+		/* Adjust this to change the minimum height of the image */
+		min-height: 10em;
+	}
+	
+		.image-featured img
+		{
+			position: absolute;
+			top: 0;
+			height: 100%;
+			width: auto;
+
+			/* Adjust this to change the horizontal placement of the image */
+			left: -50%;			
+		}
+
+	.button
+	{
+		display: block;
+		width: 100%;
+		font-size: 1em;
+		padding: 1em 0 1em 0;
+		max-width: 30em;
+		margin: 0 auto;
+	}
+
+	.actions
+	{
+		margin: 2em 0 0 0;
+	}
+
+		form .actions
+		{
+			margin: 1em 0 0 0;
+		}
+	
+		.actions li
+		{
+			margin: 15px 0 0 0;
+		}
+
+	.feature-list
+	{
+	}
+
+		.feature-list section
+		{
+			border-top: solid 1px #eee;
+		}
+
+			/* Ugh ... disgusting. */
+			.feature-list > div > div:first-child > div:first-child > section
 			{
 				border-top: 0;
 				padding-top: 0;
-				margin-top: 0;
 			}
-
-		ul.social
+		
+		.feature-list h3
 		{
+			position: relative;
+			padding: 4px 0 0 48px;
+			line-height: 1.25em;
 		}
 
-			ul.social li
+			.feature-list h3:before
 			{
-				margin: 0 0.75em 0.75em 0;
+				position: absolute;
+				left: 0;
+				top: 0;
+				width: 32px;
+				height: 32px;
+				line-height: 32px;
+				font-size: 16px;
 			}
-
-	/* Pennant */
-
-		.pennant
+	
+		.feature-list p
 		{
-			width: 7em;
-			padding: 1em 0 0.25em 0;
-			margin: 0 0 2.5em 0;
+			margin: 0 0 0 48px;
 		}
 
-			.pennant:after
-			{
-				bottom: -1.48em;
-				border-left-width: 3.5em;
-				border-right-width: 3.5em;
-				border-top-width: 1.5em;
-			}
+	.is-post-excerpt
+	{
+	}
+	
+		.is-post-excerpt .image-left
+		{
+			position: relative;
+			top: 0.25em;
+			width: 25%;
+			margin: 0;
+		}
+		
+		.is-post-excerpt h3,
+		.is-post-excerpt p
+		{
+			margin-left: 32.5%;
+		}
+
+	.mobile-hide
+	{
+		display: none;
+	}
 
 /*********************************************************************************/
 /* Mobile UI                                                                     */
@@ -152,58 +183,77 @@
 			display: none;
 		}
 
-	#titleBar .toggle
-	{
-		text-indent: -9999px;
-		width: 80px;
-		height: 60px;
-	}
-
-		#titleBar .toggle:before
+		#titleBar .toggle
 		{
-			content: '';
-			display: block;
 			position: absolute;
-			left: 10px;
-			top: 10px;
-			width: 50px;
-			height: 40px;
-			background: rgba(150,150,150,0.35) url('images/mobileUI-site-nav-opener-bg.svg') 12px 14px no-repeat;
-			border-radius: 5px;
+			top: 0;
+			left: 0;
+			text-indent: -9999px;
+			width: 60px;
+			height: 44px;
 		}
 
-		#titleBar .toggle:active
-		{
-		}
+			#titleBar .toggle:before
+			{
+				content: '';
+				position: absolute;
+				top: 6px;
+				left: 6px;
+				display: block;
+				width: 54px;
+				height: 38px;
+				background-color: rgba(92,95,103,0.5);
+				border-radius: 0.25em;
+				-moz-transition: all .15s ease-in-out;
+				-webkit-transition: all .15s ease-in-out;
+				-o-transition: all .15s ease-in-out;
+				-ms-transition: all .15s ease-in-out;
+				transition: all .15s ease-in-out;
+			}
+
+			#titleBar .toggle:after
+			{
+				content: '';
+				display: block;
+				width: 44px;
+				height: 44px;
+				position: absolute;
+				left: 15px;
+				top: 6px;
+				background: url('images/mobileUI-site-nav-opener-bg.svg') 8px 14px no-repeat;
+				opacity: 0.5;
+			}
 
 			#titleBar .toggle:active:before
 			{
-				background-color: rgba(150,150,150,0.75);
+				background-color: rgba(92,95,103,0.75);
 			}
 
 	#navPanel
 	{
-		color: #858484;
-		background-image: url('images/bg02.png');
-		box-shadow: inset -3px 0px 5px 0px rgba(0,0,0,0.35);
+		background: #242730 url('images/overlay.png');
+		box-shadow: inset -3px 0px 4px 0px rgba(0,0,0,0.1);
 	}
 
 		#navPanel .link
 		{
 			display: block;
-			color: #888;
+			color: rgba(255,255,255,0.5);
+			text-transform: uppercase;
+			text-decoration: none;
+			font-size: 0.85em;
+			letter-spacing: 0.15em;
 			text-decoration: none;
 			height: 44px;
 			line-height: 44px;
 			border-top: solid 1px rgba(255,255,255,0.05);
-			padding: 0 1em 0 1em;
-			font-style: italic;
+			margin: 0 15px 0 15px;
 		}
-		
-			#navPanel .link:first-child
-			{
-				border-top: 0;
-			}
+	
+		#navPanel .link:first-child
+		{
+			border-top: 0;
+		}
 
 		#navPanel .indent-1 { display: inline-block; width: 1em; }
 		#navPanel .indent-2 { display: inline-block; width: 2em; }
@@ -216,62 +266,45 @@
 /* Wrappers                                                                      */
 /*********************************************************************************/
 
-	#main-wrapper
+	.wrapper
 	{
-		padding: 0 10px 0 10px;
-		overflow: hidden;
+		padding: 15px 15px 5em 15px;
 	}
+
+		.wrapper .title
+		{
+			font-size: 0.9em;
+			width: 18em;
+			height: 2.5em;
+			top: -2.5em;
+			line-height: 2.5em;
+			margin-bottom: -2.5em;
+			margin-left: -9em;
+			padding-top: 0.5em;
+		}
+		
+			.wrapper .title:before,
+			.wrapper .title:after
+			{
+				height: 15px;
+				bottom: -15px;
+				background-size: 100% 100%;
+			}
 
 	#header-wrapper
 	{
-		padding: 2em 0 0 0;
-		overflow: hidden;
+		padding: 6em 2em 6em 2em;
 	}
-
-		#header-wrapper:before
-		{
-			height: 8em;
-		}
-	
-		#header-wrapper:after
-		{
-			height: 12em;
-			top: -2.5em;
-		}
 
 	#footer-wrapper
 	{
-		padding: 0 25px 0 25px;
-		overflow: hidden;
-		-webkit-transform: translateZ(0);
+		padding-top: 3em;
 	}
 
-		#footer-wrapper:before
+		#footer-wrapper .feature-list section
 		{
-			height: 3em;
-		}
-	
-/*********************************************************************************/
-/* Intro                                                                         */
-/*********************************************************************************/
-
-	#intro
-	{
-		padding: 0 25px 0 25px;
-	}
-	
-		#intro section
-		{
-			position: relative;
-			border-top:	solid 1px #dfdfdf;
-			padding: 2.5em 0 0 0;
-			margin: 0;
-		}
-
-		#intro section.first
-		{
-			border-top: 0;
-			padding-top: 0;
+			border-top-color: #eee;
+			border-top-color: rgba(255,255,255,0.05);
 		}
 
 /*********************************************************************************/
@@ -280,17 +313,31 @@
 
 	#header
 	{
+	}
+
+/*********************************************************************************/
+/* Logo                                                                          */
+/*********************************************************************************/
+
+	#logo
+	{
 		text-align: center;
 	}
-	
-		#header h1
-		{
-			color: #252122;
-			font-weight: 900;
-			font-size: 1.75em;
-			letter-spacing: -0.035em;
-		}
 
+		#logo h1
+		{
+			font-size: 1.5em;
+			letter-spacing: 0.2em;
+		}
+		
+		#logo .byline
+		{
+			margin: 1.25em 0 0 0;
+			display: block;
+			letter-spacing: 0.2em;
+			font-size: 0.9em;
+		}
+	
 /*********************************************************************************/
 /* Nav                                                                           */
 /*********************************************************************************/
@@ -299,47 +346,81 @@
 	{
 		display: none;
 	}
-
+	
 /*********************************************************************************/
-/* Banner                                                                        */
+/* Intro                                                                         */
 /*********************************************************************************/
 
-	#banner
+	#intro
 	{
-		margin: 0 0 2.5em 0;
+		text-align: center;
+		padding: 1em 2em 1em 2em !important;
+		margin: 0 auto;
 	}
 	
-		#banner header
-		{
-			padding: 1.5em 1em 1.5em 1em;
-		}
-		
-		#banner h2
+		#intro .style2
 		{
 			font-size: 1.5em;
-			line-height: 1.5em;
-			margin: 0 0 0.25em 0;
+			letter-spacing: 0.05em;
+			line-height: 1.25em;
+			padding: 1.25em;
 		}
-		
-		#banner .byline
+
+/*********************************************************************************/
+/* Main                                                                          */
+/*********************************************************************************/
+
+	#main
+	{
+		padding: 1em 0 0 0;
+	}
+
+/*********************************************************************************/
+/* Content                                                                       */
+/*********************************************************************************/
+
+	#content
+	{
+		padding: 0 0 2em 0;
+	}
+
+		#content header.style1
 		{
-			font-size: 1.2em;
+			padding-bottom: 2.5em;
+		}
+
+/*********************************************************************************/
+/* Sidebar                                                                       */
+/*********************************************************************************/
+
+	#sidebar
+	{
+	}
+
+/*********************************************************************************/
+/* Footer                                                                        */
+/*********************************************************************************/
+
+	#footer
+	{
+	}
+	
+		#footer hr
+		{
+			display: none;
 		}
 
 /*********************************************************************************/
 /* Copyright                                                                     */
 /*********************************************************************************/
-		
+
 	#copyright
 	{
-		margin: 3em 0 0 0;
+		padding: 2em 0 0 0;
 	}
 	
-		#copyright .links
+		#copyright span
 		{
-			padding: 0.75em 1.25em 0.75em 1.25em;
+			padding: 1.5em 4em 1.5em 4em;
+			line-height: 1.5em;
 		}
-
-article h2 {
-	clear:right;
-}
