--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -45,6 +45,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
     <script src="{{ STATICURL }}/theme/js/config.js"></script>
     
     <link rel="stylesheet" href="{{ STATICURL }}/theme/css/pygment.css" />
+    <link rel="stylesheet" href="{{ STATICURL }}/theme/css/style.css" />
 
     {% endblock head %}    
 </head>
@@ -204,8 +205,6 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
             detach: false
         });
     });
-
-
 </script>
 <script src="/theme/js/skel.min.js"></script>
 <script src="/theme/js/skel-panels.min.js"></script>
