--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -45,8 +45,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
     <script src="{{ STATICURL }}/theme/js/config.js"></script>
     
     <link rel="stylesheet" href="{{ STATICURL }}/theme/css/pygment.css" />
-    <link rel="stylesheet" href="{{ STATICURL }}/theme/css/style.css" />
-
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     {% endblock head %}    
 </head>
 <body class="{% block bodyclass %}{% if page_name == 'index' %}homepage{% endif %}{% endblock %}">
