--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -46,7 +46,8 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
     
     <link rel="stylesheet" href="{{ STATICURL }}/theme/css/pygment.css" />
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-    {% endblock head %}    
+    <link rel="stylesheet" href="{{ STATICURL }}/theme/css/style.css" />
+{% endblock head %}    
 </head>
 <body class="{% block bodyclass %}{% if page_name == 'index' %}homepage{% endif %}{% endblock %}">
 
